--- a/templates/fletes_mudanzas.html
+++ b/templates/fletes_mudanzas.html
@@ -137,7 +137,7 @@
 
     <!-- Video de fondo con reproducción forzada en Telegram -->
     <video id="videoFondo" muted loop playsinline>
-        <source src="{{ url_for('static', filename='videos/mudanza.mp4') }}" type="video/mp4">
+        <source src="{{ url_for('static', filename='images/mudanza.mp4') }}" type="video/mp4">
         Tu navegador no soporta la etiqueta de video.
     </video>
 
