--- a/templates/fletes_mudanzas.html
+++ b/templates/fletes_mudanzas.html
@@ -33,7 +33,7 @@
         .container {
             text-align: center;
             z-index: 2;
-            background: rgba(0, 0, 0, 0.4); /* Mismo estilo que Turismo */
+            background: rgba(0, 0, 0, 0.4);
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.7);
@@ -137,6 +137,7 @@
 
     <!-- Video de fondo con reproducción forzada en Telegram -->
     <video id="videoFondo" muted loop playsinline>
+        <source src="{{ url_for('static', filename='images/mudanza.webm') }}" type="video/webm">
         <source src="{{ url_for('static', filename='images/mudanza.mp4') }}" type="video/mp4">
         Tu navegador no soporta la etiqueta de video.
     </video>
