--- a/templates/taxi.html
+++ b/templates/taxi.html
@@ -68,7 +68,7 @@
             cursor: pointer;
         }
     </style>
-    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap&v=weekly" async></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBQldjdCRIWhdXc_gz81TPr1xGyK6K5z1w&callback=initMap&v=weekly" async></script>
 </head>
 <body>
 
